--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -2,7 +2,7 @@ version: 2
 jobs:
   build:
     docker:
-      - image: circleci/node:chakracore-12.0.0
+      - image: circleci/node:12.9.0-stretch
     steps:
       - checkout
       - restore_cache:
@@ -19,7 +19,7 @@ jobs:
             - ~/.cache/yarn
   test:
     docker:
-      - image: circleci/node:chakracore-12.0.0
+      - image: circleci/node:12.9.0-stretch
     steps:
       - checkout
       - run:
@@ -28,7 +28,6 @@ jobs:
       - run:
           name: Test
           command: yarn test
-
 workflows:
   version: 2
   build_and_test:
