--- a/.eslintrc
+++ b/.eslintrc
@@ -6,9 +6,11 @@
     "sourceType": "module"
   },
   "rules": {
-    "semi": ["error", "always"],
-    "quotes": ["error", "double"],
+    "semi": "off",
+    "quotes": ["error", "single"],
     "@typescript-eslint/explicit-function-return-type": "off",
-    "@typescript-eslint/no-explicit-any": "off"
+    "@typescript-eslint/no-explicit-any": "off",
+    "@typescript-eslint/interface-name-prefix": "off",
+    "@typescript-eslint/no-empty-function": "warn"
   }
 }
