Add skeleton for commands

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -28,6 +28,9 @@ jobs:
       - run:
           name: Build JS
           command: yarn build
+       - run:
+         name: Lint
+         command: yarn lint
       - run:
           name: Test
           command: yarn test
