--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -29,6 +29,9 @@ jobs:
           name: Build JS
           command: yarn build
       - run:
+          name: Lint
+          command: yarn lint
+      - run:
           name: Test
           command: yarn test
 workflows:
