--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "watch-ts": "tsc -w",
     "lint": "tsc --noEmit && eslint \"**/*.{js,ts}\"",
     "test": "jest --forceExit --coverage --verbose",
+    "test-ci": "sudo npm link && jest --forceExit --coverage --verbose",
     "watch-test": "npm run test -- --watchAll"
   },
   "devDependencies": {
