Add CRA as dep; Parse flags correctly; refactor CommandFactory

--- a/package.json
+++ b/package.json
@@ -1,7 +1,9 @@
 {
   "name": "react-sdk",
   "version": "1.0.0",
-  "dependencies": {},
+  "dependencies": {
+    "create-react-app": "^3.1.2"
+  },
   "bin": {
     "react-sdk": "./dist/index.js"
   },
