--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "lint": "tsc --noEmit && eslint \"**/*.{js,ts}\"",
     "test": "jest --forceExit --coverage --verbose",
     "test-ci": "sudo npm link && yarn test",
+    "test-unit": "jest --forceExit --coverage --verbose ./test/unit/",
+    "test-feature": "jest --forceExit --coverage --verbose ./test/feature/",
     "watch-test": "npm run test -- --watchAll"
   },
   "devDependencies": {
