--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -34,6 +34,9 @@ jobs:
       - run:
           name: Test
           command: yarn test-ci
+      - run:
+          name: asd
+          command: cat ./log.txt
 workflows:
   version: 2
   build_and_test:
