--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -32,8 +32,11 @@ jobs:
           name: Lint
           command: yarn lint
       - run:
-          name: Test
-          command: yarn test-ci
+          name: Test Unit
+          command: yarn test-unit-ci
+       - run:
+         name: Test Feature
+         command: yarn test-feature-ci
 workflows:
   version: 2
   build_and_test:
