--- a/package.json
+++ b/package.json
@@ -13,9 +13,10 @@
     "watch-ts": "tsc -w",
     "lint": "tsc --noEmit && eslint \"**/*.{js,ts}\"",
     "test": "jest --forceExit --coverage --verbose --runInBand",
-    "test-ci": "sudo npm link && yarn test",
+    "test-unit-ci": "sudo npm link && yarn test-unit",
     "test-unit": "jest --forceExit --coverage --verbose ./test/unit/",
     "test-feature": "jest --forceExit --coverage --verbose ./test/feature/",
+    "test-feature-ci": "sudo npm link && yarn test-feature",
     "watch-test": "npm run test -- --watchAll"
   },
   "devDependencies": {
