--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -32,11 +32,8 @@ jobs:
           name: Lint
           command: yarn lint
       - run:
-          name: Test Unit
-          command: yarn test-unit-ci
-       - run:
-         name: Test Feature
-         command: yarn test-feature-ci
+          name: Test
+          command: yarn test-ci
 workflows:
   version: 2
   build_and_test:
