--- a/package.json
+++ b/package.json
@@ -12,11 +12,10 @@
     "build-ts": "tsc",
     "watch-ts": "tsc -w",
     "lint": "tsc --noEmit && eslint \"**/*.{js,ts}\"",
-    "test": "jest --forceExit --coverage --verbose --runInBand",
-    "test-unit-ci": "sudo npm link && yarn test-unit",
+    "test": "jest --forceExit --coverage --verbose",
+    "test-ci": "sudo npm link && yarn test --runInBand",
     "test-unit": "jest --forceExit --coverage --verbose ./test/unit/",
     "test-feature": "jest --forceExit --coverage --verbose ./test/feature/",
-    "test-feature-ci": "sudo npm link && yarn test-feature",
     "watch-test": "npm run test -- --watchAll"
   },
   "devDependencies": {
