--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "watch-ts": "tsc -w",
     "lint": "tsc --noEmit && eslint \"**/*.{js,ts}\"",
     "test": "jest --forceExit --coverage --verbose",
-    "test-ci": "sudo npm link && yarn test",
+    "test-ci": "sudo npm link && yarn test --runInBand",
     "test-unit": "jest --forceExit --coverage --verbose ./test/unit/",
     "test-feature": "jest --forceExit --coverage --verbose ./test/feature/",
     "watch-test": "npm run test -- --watchAll"
