--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "build-ts": "tsc",
     "watch-ts": "tsc -w",
     "lint": "tsc --noEmit && eslint \"**/*.{js,ts}\"",
-    "test": "jest --forceExit --coverage --verbose",
+    "test": "jest --forceExit",
     "test-ci": "export TEST_ENV=CI && sudo npm link && yarn test --runInBand",
     "test-unit": "jest --forceExit --coverage --verbose ./test/unit/",
     "test-feature": "jest --forceExit --coverage --verbose ./test/feature/",
