--- a/package.json
+++ b/package.json
@@ -14,8 +14,8 @@
     "lint": "tsc --noEmit && eslint \"**/*.{js,ts}\"",
     "test": "jest --forceExit",
     "test-ci": "export TEST_ENV=CI && sudo npm link && yarn test --runInBand",
-    "test-unit": "jest --forceExit --coverage --verbose ./test/unit/",
-    "test-feature": "jest --forceExit --coverage --verbose ./test/feature/",
+    "test-unit": "jest --forceExit ./test/unit/",
+    "test-feature": "jest --forceExit ./test/feature/",
     "watch-test": "npm run test -- --watchAll"
   },
   "devDependencies": {
