--- a/.gitignore
+++ b/.gitignore
@@ -68,3 +68,9 @@ dist/
 
 # files generated from tests
 src/react-app-env.d.ts
+
+# Testing the commands app
+my-app/
+
+# Apps generate from feature tests
+*my-app/
