--- a/package.json
+++ b/package.json
@@ -12,10 +12,10 @@
     "build-ts": "tsc",
     "watch-ts": "tsc -w",
     "lint": "tsc --noEmit && eslint \"**/*.{js,ts}\"",
-    "test": "jest --forceExit --coverage --verbose",
-    "test-ci": "sudo npm link && yarn test",
-    "test-unit": "jest --forceExit --coverage --verbose ./test/unit/",
-    "test-feature": "jest --forceExit --coverage --verbose ./test/feature/",
+    "test": "jest --forceExit --coverage",
+    "test-ci": "export TEST_ENV=CI && sudo npm link && yarn test",
+    "test-unit": "npm run test ./test/unit/",
+    "test-feature": "npm run test ./test/feature/",
     "watch-test": "npm run test -- --watchAll"
   },
   "devDependencies": {
