--- a/package.json
+++ b/package.json
@@ -11,12 +11,13 @@
     "build": "npm run build-ts",
     "build-ts": "tsc",
     "watch-ts": "tsc -w",
-    "lint": "tsc --noEmit && eslint \"**/*.{js,ts}\"",
+    "lint": "tsc --noEmit && eslint \"src/**/*.ts\"",
     "test": "jest --forceExit --coverage",
     "test-ci": "export TEST_ENV=CI && sudo npm link && yarn test",
     "test-unit": "npm run test ./test/unit/",
     "test-feature": "npm run test ./test/feature/",
-    "watch-test": "npm run test -- --watchAll"
+    "watch-test": "npm run test -- --watchAll",
+    "watch-test-unit": "npm run test-unit -- --watchAll"
   },
   "devDependencies": {
     "@types/jest": "^24.0.18",
