--- a/package.json
+++ b/package.json
@@ -1,9 +1,7 @@
 {
   "name": "react-sdk",
   "version": "1.0.0",
-  "dependencies": {
-    "create-react-app": "^3.1.2"
-  },
+  "preinstall": "npm i -g create-react-app",
   "bin": {
     "react-sdk": "./dist/index.js"
   },
@@ -16,8 +14,7 @@
     "test-ci": "export TEST_ENV=CI && sudo npm link && yarn test",
     "test-unit": "npm run test ./test/unit/",
     "test-feature": "npm run test ./test/feature/",
-    "watch-test": "npm run test -- --watchAll",
-    "watch-test-unit": "npm run test-unit -- --watchAll"
+    "watch-test": "npm run test -- --watchAll"
   },
   "devDependencies": {
     "@types/jest": "^24.0.18",
