--- a/demos/ts/with-redux/package.json
+++ b/demos/ts/with-redux/package.json
@@ -4,16 +4,17 @@
   "private": true,
   "dependencies": {
     "@types/jest": "24.0.20",
-    "@types/node": "12.11.7",
-    "@types/react-dom": "16.9.3",
+    "@types/node": "^12.11.7",
+    "@types/react": "^16.9.11",
+    "@types/react-dom": "^16.9.3",
     "@types/react-redux": "^7.1.5",
+    "@types/redux": "^3.6.0",
+    "@types/redux-thunk": "^2.1.0",
     "react": "^16.11.0",
     "react-dom": "^16.11.0",
     "react-redux": "^7.1.1",
     "react-scripts": "3.2.0",
-    "redux": "^4.0.4",
-    "redux-thunk": "^2.3.0",
-    "typescript": "3.6.4"
+    "typescript": "^3.6.4"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -35,10 +36,5 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  },
-  "devDependencies": {
-    "@types/react": "^16.9.11",
-    "@types/redux": "^3.6.0",
-    "@types/redux-thunk": "^2.1.0"
   }
 }
