--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,7 +14,9 @@
         "node_modules/*",
         "src/types/*"
       ]
-    }
+    },
+    "experimentalDecorators": true,
+    "emitDecoratorMetadata": true
   },
   "include": [
     "src/**/*"
