--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,5 +1,6 @@
 {
   "declaration": true,
+  "files": ["dist/**/*"],
   "compilerOptions": {
     "module": "commonjs",
     "esModuleInterop": true,
