--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
   "name": "@react-gn/react-gn",
-  "version": "1.0.5",
+  "version": "1.0.6",
   "preinstall": "npm i -g create-react-app",
   "bin": {
-    "react-gn": "./dist/index.js"
+    "react-gn": "./src/index.ts"
   },
-  "main": "./dist/index.js",
+  "main": "./src/index.ts",
   "types": "index.d.ts",
   "prepublish": "tsc",
   "prepare" : "npm run build",
