--- a/package.json
+++ b/package.json
@@ -1,13 +1,13 @@
 {
   "name": "@react-gn/react-gn",
-  "version": "1.0.6",
+  "version": "1.0.7",
   "preinstall": "npm i -g create-react-app",
   "bin": {
-    "react-gn": "./src/index.ts"
+    "@react-gn/react-gn": "./dist/index.js"
   },
-  "main": "./src/index.ts",
+  "main": "./dist/index.js",
   "types": "index.d.ts",
-  "prepublish": "tsc",
+  "prepublish": "tsc -p",
   "prepare" : "npm run build",
   "keywords": ["react", "cli", "generator"],
   "scripts": {
