--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -32,8 +32,11 @@ jobs:
           name: Lint
           command: yarn lint
       - run:
-          name: Test
-          command: yarn test-ci
+          name: Unit Tests
+          command: yarn test-unit-ci
+      - run:
+          name: Feature Tests
+          command: yarn test-feature-ci
       - store_artifacts:
           path: coverage
 
