--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -26,6 +26,9 @@ jobs:
           name: yarn install
           command: yarn install
       - run:
+          name: install npx
+          command: yarn global add npx
+      - run:
           name: Build JS
           command: yarn build
       - run:
