--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "typescript": "^3.6.3"
   },
   "dependencies": {
-    "create-react-app": "^3.3.0"
+    "create-react-app": "^3.3.0",
+    "steed": "^1.1.3"
   }
 }
