--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,6 +5,9 @@
     "esModuleInterop": true,
     "allowSyntheticDefaultImports": true,
     "target": "es5",
+    "lib": [
+      "es2019",
+    ],
     "noImplicitAny": true,
     "moduleResolution": "node",
     "sourceMap": true,
