--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@types/inquirer": "^6.5.0",
     "@types/jest": "^24.0.18",
     "@types/node": "^12.12.17",
+    "@types/prettier": "^1.19.0",
     "@types/steed": "^1.1.2",
     "@typescript-eslint/eslint-plugin": "^2.2.0",
     "@typescript-eslint/parser": "^2.2.0",
