--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
   "dependencies": {
     "ejs": "^3.0.1",
     "inquirer": "^7.0.0",
+    "inquirer-path": "^1.0.0-beta5",
     "ncp": "^2.0.0",
     "prettier": "^1.19.1",
     "steed": "^1.1.3"
