--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@types/jest": "^24.0.18",
     "@types/node": "^12.12.17",
     "@types/prettier": "^1.19.0",
+    "@types/rimraf": "^2.0.3",
     "@types/steed": "^1.1.2",
     "@typescript-eslint/eslint-plugin": "^2.2.0",
     "@typescript-eslint/parser": "^2.2.0",
@@ -43,6 +44,7 @@
     "inquirer-path": "^1.0.0-beta5",
     "ncp": "^2.0.0",
     "prettier": "^1.19.1",
+    "rimraf": "^3.0.2",
     "steed": "^1.1.3"
   }
 }
